Adds testing url aclaration

--- a/source/localizable/index.html.md.erb
+++ b/source/localizable/index.html.md.erb
@@ -31,6 +31,12 @@ Each action that does, will have it in the description.
 
 We broke down information result into Models, to maintain a simpler and cleaner looking documentation. You can see our models <a class="link" href="#models">here</a>.
 
+# Sandbox
+
+The endpoints are the same in both Sandbox and Production environments. The only thing that changes is the base URI.
+
+To use the API in Sandbox mode, replace the base url with `https://sandbox-api.factoro.mx`.
+
 # Authentication
 
 > To authorize, use this code:
